--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "@apollo/server": "^5.2.0",
     "@babel/runtime": "^7.23.5",
+    "@graphql-tools/schema": "^9.0.19",
+    "body-parser": "^2.2.1",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
+    "graphql": "^16.12.0",
+    "graphql-tag": "^2.12.6",
     "meteor-node-stubs": "^1.2.12"
   }
 }
