--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "cors": "^2.8.5",
     "express": "^4.22.1",
     "graphql": "^16.12.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-tag": "^2.12.6",
-    "meteor-node-stubs": "^1.2.12"
+    "graphql-ws": "^5.16.2",
+    "meteor-node-stubs": "^1.2.12",
+    "ws": "^8.16.0"
   }
 }
